--- a/index.html
+++ b/index.html
@@ -236,7 +236,6 @@ function changeGenArray(genNum) {
 		numOfGens -= 1;
 	} else {
 		generationArray.push(genNum);
-		console.log("You pushed " + genNum + " to it...");
 		numOfGens += 1;
 	}
 }	
@@ -360,9 +359,7 @@ function showCorrectOrNot(amIRight, whoIsIt, resetAlso) {
 
 			$("#rightOrNot").hide(300);
 
-			$("#myImg").fadeTo(200, 1, function() {
-				console.log("Animation...");
-			});
+			$("#myImg").fadeTo(200, 1);
 
 		}, 3000);
 
